// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExcelAnalyzer export/query formatters — characterization > _interpretQuery — average/mean branch 1`] = `
{
  "Revenue": 1350,
}
`;

exports[`ExcelAnalyzer export/query formatters — characterization > _interpretQuery — default + no-sheet branches 1`] = `
{
  "def": {
    "message": "Query interpreted but no specific result generated",
  },
  "noSheet": null,
}
`;

exports[`ExcelAnalyzer export/query formatters — characterization > _interpretQuery — grouped "by" branch 1`] = `
{
  "EU": 5300,
  "US": 200,
}
`;

exports[`ExcelAnalyzer export/query formatters — characterization > exportForChat — full rich analysis (all sections) 1`] = `
{
  "highlights": [
    "Revenue is highly variable",
    "EU dominates",
  ],
  "patterns": [
    "Right-skewed Revenue distribution",
  ],
  "recommendations": [
    "Investigate the 5000 outlier",
  ],
  "text": "# 📊 Analyse Détaillée du Fichier

## 📋 Vue d'ensemble

| Métrique | Valeur |
|---|---|
| **Lignes** | 4 |
| **Colonnes** | 3 |
| **Feuilles** | 1 |
| **Complétude** | 87.5% |
| **Doublons** | 1 |

## 📑 Structure des Colonnes

| Colonne | Type | Description |
|---|---|---|
| **Revenue** | 📊 number | min=100, max=5 000, moy=1 350 |
| **Region** | 📝 string | 2 valeurs uniques |
| **email** | 📧 email |  |

## 📈 Statistiques Numériques

### Revenue
| Mesure | Valeur |
|---|---|
| Nombre de valeurs | 4 |
| Moyenne | 1 350 |
| Médiane | 150 |
| Écart-type | 2 100 |
| Minimum | 100 |
| Maximum | 5 000 |
| Q1 (25%) | 100 |
| Q3 (75%) | 1 400 |
| IQR | 1 300 |
| Somme totale | 5 400 |

## 🏷️ Analyse Catégorielle

### Region
- **Valeurs uniques**: 2
- **Valeur dominante**: EU

| Valeur | Fréquence | % |
|---|---|---|
| EU | 3 | 75.0% |
| US | 1 | 25.0% |

## 🔗 Corrélations Significatives

| Colonne 1 | Colonne 2 | Corrélation | Force |
|---|---|---|---|
| Revenue | Units | 0.920 | 🔴 Très forte |
| Revenue | Region | 0.650 | 🟠 Forte |
| A | B | -0.550 | 🟡 Modérée |

## ⚠️ Valeurs Aberrantes Détectées

### Revenue
- **Méthode**: IQR
- **Nombre d'outliers**: 2
- **Limites**: [0, 3 000]
- **Valeurs**: 5 000, 4 800

## ✅ Qualité des Données

- **Complétude globale**: 🟡 87.5%
- **Valeurs manquantes**:
  - email: 1 valeurs manquantes
- **Doublons détectés**: 1 lignes

## 💡 Insights & Recommandations

### Patterns identifiés
- Right-skewed Revenue distribution

### Observations clés
- Revenue is highly variable
- EU dominates

### Recommandations
- 📌 Investigate the 5000 outlier

### Top performers
- 🏆 EU region

",
}
`;

exports[`ExcelAnalyzer export/query formatters — characterization > exportForChat — minimal/empty analysis 1`] = `
{
  "highlights": [],
  "patterns": [],
  "recommendations": [],
  "text": "# 📊 Analyse Détaillée du Fichier

## 📋 Vue d'ensemble

| Métrique | Valeur |
|---|---|
| **Lignes** | 0 |
| **Colonnes** | 0 |
| **Feuilles** | 1 |

",
}
`;

exports[`ExcelAnalyzer export/query formatters — characterization > exportForChat — partial (quality only, no stats/categorical) 1`] = `
{
  "highlights": [],
  "patterns": [],
  "recommendations": [],
  "text": "# 📊 Analyse Détaillée du Fichier

## 📋 Vue d'ensemble

| Métrique | Valeur |
|---|---|
| **Lignes** | 2 |
| **Colonnes** | 1 |
| **Feuilles** | 1 |
| **Complétude** | 100.0% |

## 📑 Structure des Colonnes

| Colonne | Type | Description |
|---|---|---|
| **A** | 🔢 integer |  |

## ✅ Qualité des Données

- **Complétude globale**: 🟢 100.0%
- **Valeurs manquantes**: Aucune ✓
- **Doublons**: Aucun ✓

",
}
`;

exports[`ExcelAnalyzer export/query formatters — characterization > exportToJSON — round-trips analysis 1`] = `
"{
  "a": 1,
  "b": [
    2,
    3
  ]
}"
`;

exports[`ExcelAnalyzer export/query formatters — characterization > exportToMarkdown — empty 1`] = `
"# Rapport d'Analyse Excel

## Résumé

| Métrique | Valeur |
|---|---|
| Lignes | 0 |
| Colonnes | 0 |
| Feuilles | 1 |

"
`;

exports[`ExcelAnalyzer export/query formatters — characterization > exportToMarkdown — with stats 1`] = `
"# Rapport d'Analyse Excel

## Résumé

| Métrique | Valeur |
|---|---|
| Lignes | 4 |
| Colonnes | 3 |
| Feuilles | 1 |

## Statistiques

| Colonne | Moyenne | Min | Max | Écart-type |
|---|---|---|---|---|
| Revenue | 1350.00 | 100 | 5000 | 2100.00 |
"
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _checkDataQuality 1`] = `
{
  "completeness": 93.33333333333333,
  "completenessScore": 0.9333333333333332,
  "duplicates": {
    "count": 2,
    "percentage": 28.57142857142857,
  },
  "filledCells": 14,
  "issues": [
    {
      "column": "Revenue",
      "count": 6,
      "severity": "high",
      "type": "outliers",
    },
  ],
  "missingValues": {
    "Region": 0,
    "Revenue": 0,
    "Temp": 0,
    "email": 1,
  },
  "nullCells": 1,
  "qualityScore": 87.33333333333333,
  "totalCells": 15,
}
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _detectSensitiveColumns 1`] = `
{
  "empty": [],
  "mixed": [
    "phone_number",
    "IBAN",
    "home address",
  ],
  "nullSheet": [],
  "rich": [
    "email",
  ],
}
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _formatForAI — empty data 1`] = `
"## DONNÉES DU FICHIER EXCEL (à utiliser pour répondre)

### Informations générales
- Nombre de lignes: 0
- Colonnes: 


### AGRÉGATIONS PAR COLONNE

## Question de l'utilisateur
"rien"

## INSTRUCTIONS ABSOLUES
1. Utilise UNIQUEMENT les données ci-dessus
2. NE JAMAIS inventer de noms de clients, produits ou chiffres
3. Cite les valeurs EXACTES trouvées dans les données
4. Si une donnée n'existe pas, dis clairement "Cette information n'est pas dans le fichier"
5. Pour identifier le "meilleur" client ou produit, additionne les valeurs numériques par catégorie
"
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _formatForAI — no sheets 1`] = `
"## DONNÉES DU FICHIER EXCEL (à utiliser pour répondre)

### Informations générales
- Nombre de lignes: 0
- Colonnes: 


### AGRÉGATIONS PAR COLONNE

## Question de l'utilisateur
"question"

## INSTRUCTIONS ABSOLUES
1. Utilise UNIQUEMENT les données ci-dessus
2. NE JAMAIS inventer de noms de clients, produits ou chiffres
3. Cite les valeurs EXACTES trouvées dans les données
4. Si une donnée n'existe pas, dis clairement "Cette information n'est pas dans le fichier"
5. Pour identifier le "meilleur" client ou produit, additionne les valeurs numériques par catégorie
"
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _formatForAI — numeric + categorical aggregations 1`] = `
"## DONNÉES DU FICHIER EXCEL (à utiliser pour répondre)

### Informations générales
- Nombre de lignes: 4
- Colonnes: Product, Revenue, Units

### DONNÉES COMPLÈTES DU FICHIER

| Product | Revenue | Units |
| --- | --- | --- |
| A | 100 | 2 |
| B | 200 | 5 |
| A | 50 | 1 |
| C | 300 | 7 |

### AGRÉGATIONS PAR COLONNE

**Product** (catégoriel - 3 valeurs uniques):
  - "A": 2 fois | Revenue: 150.00 | Units: 3.00
  - "B": 1 fois | Revenue: 200.00 | Units: 5.00
  - "C": 1 fois | Revenue: 300.00 | Units: 7.00

**Revenue** (numérique):
  - Somme totale: 650.00
  - Moyenne: 162.50
  - Max: 300, Min: 50

**Units** (numérique):
  - Somme totale: 15.00
  - Moyenne: 3.75
  - Max: 7, Min: 1

## Question de l'utilisateur
"Quel est le meilleur produit ?"

## INSTRUCTIONS ABSOLUES
1. Utilise UNIQUEMENT les données ci-dessus
2. NE JAMAIS inventer de noms de clients, produits ou chiffres
3. Cite les valeurs EXACTES trouvées dans les données
4. Si une donnée n'existe pas, dis clairement "Cette information n'est pas dans le fichier"
5. Pour identifier le "meilleur" client ou produit, additionne les valeurs numériques par catégorie
"
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _generateColumnProfiles 1`] = `
{
  "Region": {
    "frequency": {
      "EU": 3,
      "US": 1,
    },
    "nullCount": 0,
    "nullPercentage": 0,
    "sampleValues": [
      "EU",
      "EU",
      "US",
      "EU",
    ],
    "statistics": null,
    "topValues": [
      {
        "count": 3,
        "value": "EU",
      },
      {
        "count": 1,
        "value": "US",
      },
    ],
    "totalCount": 4,
    "type": "string",
    "uniqueCount": 2,
  },
  "Revenue": {
    "frequency": {
      "100": 2,
      "200": 1,
      "5000": 1,
    },
    "nullCount": 0,
    "nullPercentage": 0,
    "sampleValues": [
      100,
      5000,
      200,
      100,
    ],
    "statistics": {
      "coefficientOfVariation": 155.5,
      "max": 5000,
      "mean": 1350,
      "median": 150,
      "skewness": 1.8,
      "standardDeviation": 2100,
      "sum": 5400,
    },
    "topValues": [
      {
        "count": 2,
        "value": "100",
      },
      {
        "count": 1,
        "value": "200",
      },
      {
        "count": 1,
        "value": "5000",
      },
    ],
    "totalCount": 4,
    "type": "number",
    "uniqueCount": 3,
  },
  "Temp": {
    "frequency": {
      "20": 2,
      "21": 1,
    },
    "nullCount": 0,
    "nullPercentage": 0,
    "sampleValues": [
      20,
      21,
      20,
    ],
    "statistics": {
      "mean": 20.3,
      "median": 20,
      "standardDeviation": 0.5,
      "sum": 61,
    },
    "topValues": [
      {
        "count": 2,
        "value": "20",
      },
      {
        "count": 1,
        "value": "21",
      },
    ],
    "totalCount": 3,
    "type": "number",
    "uniqueCount": 2,
  },
  "email": {
    "frequency": {
      "a@x.com": 2,
      "b@x.com": 1,
    },
    "nullCount": 1,
    "nullPercentage": 25,
    "sampleValues": [
      "a@x.com",
      "b@x.com",
      "a@x.com",
    ],
    "statistics": null,
    "topValues": [
      {
        "count": 2,
        "value": "a@x.com",
      },
      {
        "count": 1,
        "value": "b@x.com",
      },
    ],
    "totalCount": 4,
    "type": "string",
    "uniqueCount": 2,
  },
}
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _generateHighlights 1`] = `
[
  {
    "column": "Revenue",
    "label": "Total Revenue: 5 400",
    "type": "sum",
    "value": 5400,
  },
  {
    "column": "Region",
    "label": "Region: 2 valeurs uniques",
    "type": "categorical",
    "uniqueCount": 2,
  },
  {
    "column": "Temp",
    "label": "Total Temp: 61",
    "type": "sum",
    "value": 61,
  },
]
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _generateKeyInsights 1`] = `
[
  "La colonne "Revenue" montre une asymétrie à droite (queue longue vers les hautes valeurs)",
  "La colonne "Revenue" présente une forte variabilité (CV: 155.5%)",
  "La colonne "Revenue" a une moyenne significativement supérieure à la médiane, suggérant des valeurs extrêmes hautes",
  "6 valeur(s) aberrante(s) détectée(s) dans "Revenue"",
  "La catégorie "EU" domine dans "Region" (75%)",
]
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _generateRecommendations 1`] = `
[
  "Vous devriez investiguer les valeurs aberrantes détectées pour vérifier leur validité",
  "Vous pourriez analyser les tendances temporelles pour identifier des patterns saisonniers",
  "La forte variabilité suggère de segmenter les données par catégorie pour une analyse plus fine",
  "Avec plusieurs colonnes numériques, une analyse de corrélation pourrait révéler des relations intéressantes",
]
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _identifyPatterns 1`] = `
[
  "Données temporelles détectées - analyse de tendances possible",
  "1 dimension(s) catégorielle(s) pour segmentation",
  "2 colonnes numériques identifiées pour analyse statistique",
  "Données très concentrées autour de la moyenne pour "Temp"",
]
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > _identifyTopPerformers 1`] = `
[
  "Valeur maximale exceptionnelle dans "Revenue": 5 000 (2x la moyenne)",
  "Top "Region": EU (3 occurrences)",
]
`;

exports[`ExcelAnalyzer insight/quality helpers — characterization > edge: empty sheets array 1`] = `
{
  "insights": [],
  "patterns": [],
  "profiles": {},
  "quality": {
    "completeness": 100,
    "completenessScore": 1,
    "duplicates": {
      "count": 0,
      "percentage": 0,
    },
    "filledCells": 0,
    "issues": [],
    "missingValues": {},
    "nullCells": 0,
    "qualityScore": 100,
    "totalCells": 0,
  },
}
`;
